# LifeOS

./: .gitattributes  .gitignore  .markdownlint.json  .yamllint.yml  ACTIVATION_CHECKLIST.md  AGENTS.md  Audit_Report_For_Autonomous_Build_Loop_v0.1.md  CHANGELOG_v1.4.1.md  CHANGELOG_v1.4.2.md  CLAUDE.md  Council_Fix_Implementation_Report.md  FIX_RETURN.md  GEMINI.md  LifeOS_DocTree_Final.txt  LifeOS_DocTree_PostPhase1.txt  PHASE1_CONDITIONS_RESOLUTION.md  PHASE1_HANDOFF.md  Phase1_Reversion_Renames.ps1  Plan_Schema_Rollout_Note.md  README.md  README_RUNTIME.md  README_Recursive_Kernel_v0.1.md  RESULTS.md  Validation_Surface_Map.md  audit_report.md  biome.json  bundle_list.txt  bundle_manifest.txt  demo_evidence.txt  demo_evidence_final.txt  evidence_manifest.txt  investigation_output.txt  last_session.json  migrate_docs.sh  opencode.json  pyproject.toml  pytest.ini  pytest_debug.txt  repro_context_swap.py  reproduce_import.py  (+15 more)
.claude/: settings.json  settings.local.json
.context/: REPO_MAP.md
.github/: CODEOWNERS
artifacts/: BLOCKED_P0.1_pyproject_packaging_metadata.md  CEO_Terminal_Packet.md  COO Doc Promotion Protocol v1.1.md  Council_Evidence_Verbatim__Trusted_Builder_Mode_v1.1.md  Council_Proposal_Trusted_Builder_v1.1.md  Council_Rereview_Packet__Trusted_Builder_Mode_v1.1__P0_Fixes.md  Evidence_Commands_And_Outputs.md  GapAnalysis_Constitutional_Enforcement_v0.1.md  INDEX.md  Implementation_Report_Autonomous_Build_Loop_P4_Prep.md  Implementation_Report_Sprint_S1_Phase_B_v1.0.md  Implementation_Report__Branch_Split__S1_vs_Phase4A_v1.0.md  Implementation_Report__MicroFix_Close_F3_F4_F7_v1.0.md  LifeOS Target Architecture v2.3c.md  PATCH_01.diff  PATCH_FIXPACK_GCBS_HARDENING_v0.3.diff  PATCH_GCBS_PROMOTION_ADMISSIBLE_v0.1.diff  PATCH_GCBS_REPAYMENT_v1.2_FINAL_EVIDENCE_DELTA_v1.0.diff  PATCH_GCBS_STANDARD_ACTIVATION_AND_ERRORCODES_v0.1.diff  PATCH_POSTGO_HARDENING_GOV_INDEX_EOL_AND_PACKAGING_v0.4.diff  PATCH_POSTGO_HARDENING_GOV_INDEX_EOL_AND_PACKAGING_v0.5.diff  REPORT_MISSION_SYNTHESIS_MVP.md  ROADMAP_Autonomous_Build_Loop_v1.0.md  Review_Packet_COO_CI_CD_Fallback_Alignment_v1.0.md  Review_Packet_COO_Copilot_NonPremium_Fallback_v1.0.md  Review_Packet_Phase_B_Self_Building_Loop_v1.0.md  Review_Packet_RemoteOps_Operationalisation_v1.1.md  Review_Packet_Safe_Cleanup_Ignore_Guardrails_v1.0.md  Review_Packet_Validator_Suite_v2_1a_P0_Hardening_Fixes_v1.0.md  Review_Packet_Validator_Suite_v2_1a_P0_v1.0.md  Review_Packet_W7_T01_Ledger_Hash_Chain_Build_Review_v1.0.md  Review_Packet_attempt_0001.md  STATUS_REPORT_Autonomous_Build_Loop_v1.0.md  Sprint_Acceptance_Validator_Checklist_S1_Phase_B.md  TEST_REPORT_BUILD_LOOP_PHASE2_v1.1_PASS.md  TEST_REPORT_GCBS_PROMOTION_ADMISSIBLE_v0.1.md  TEST_REPORT_GCBS_PROMOTION_ADMISSIBLE_v0.2.md  TEST_REPORT_GCBS_REPAYMENT_v1.2.2_SHIPPED_EVIDENCE_DELTA_v1.0.md  TEST_REPORT_GCBS_V11_PROFILE_GATES_PASS.md  TEST_REPORT_GOVERNANCE_DETACHED_DIGEST_V0.2.2.md  (+24 more)
closure_evidence_temp/: transcript_fail_bpg007.txt  transcript_fail_bpg011.txt  transcript_pass_run.txt  transcript_pytest.txt
config/: Antigrav_DocSteward_Config_v0.1.yaml  GEMINI.md  INDEX.md  INDEX_v1.0.md  backlog.yaml  certification_profiles.yaml  dispatch.yaml  governance_baseline.yaml  invariants.yaml  models.yaml  recursive_kernel_config.yaml  steward_runner.yaml
doc_steward/: admin_archive_link_ban_validator.py  admin_structure_validator.py  archive_structure_validator.py  artefact_index_validator.py  cli.py  daily_summary.py  dap_validator.py  doc_authority_manifest.py  drift_sweep_issue_creator.py  entrypoint_freshness_sweep.py  freshness_validator.py  global_archive_link_ban_validator.py  index_checker.py  link_checker.py  protocols_structure_validator.py  runtime_structure_validator.py  version_duplicate_detector.py  wiki_lint_validator.py
doc_steward/scripts/: INDEX_GENERATED.md  archive_scripts.py  auto_index.py  conftest_runtime.py  find_runtime_files.py  list_root.py  list_source_tree.py  port_project_builder.py  port_runtime.py  port_runtime_v2.py  pyproject.toml  refactor_imports.py  verify_imports.py  verify_migration.py  verify_migration_selective.py
docs/: CHANGELOG.md  GEMINI.md  INDEX.md  INDEX_v1.0.md  INDEX_v1.1.md  LifeOS_Design_Principles_Protocol_v0.1.md  LifeOS_Overview.md  LifeOS_Strategic_Corpus.md  LifeOS_Universal_Corpus.md  QUICKSTART.md  scaffold_lifeos.py
knowledge-evidence/: README.md  issue-70-operational-effect.md
knowledge-staging/: README.md  cand-20260428-codex-ea-lane.md  cand-20260428-external-comms-gated.md  cand-20260428-native-memory-noncanonical.md  cand-20260515-hermes-8183bfba236466f3.md  cand-20260515-openclaw-06c6ce2958dbe649.md
lifeos/: __init__.py  __main__.py
lifeos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
logs/: debug_output_archive.txt
memory/: README.md
opencode_governance/: README.md  __init__.py  errors.py  service.py
recursive_kernel/: autogate.py  backlog_parser.py  builder.py  planner.py  runner.py  verifier.py
runtime/: __main__.py  amendment_engine.py  cli.py  dap_gateway.py  engine.py  errors.py  freeze.py  gates.py  invariants.py  lint_engine.py  migration.py  rollback.py  sign.py  state_store.py
schemas/: closure_manifest_v1.json  closure_manifest_v1_1.json  conductor_fidelity_verification_v1.json  intent_fidelity_bypass_v1.json  intent_fidelity_report_v1.json  intent_review_report_v1.json  intent_source_manifest_v1.json
scripts/: audit_gate_build_loop_phase1a.py  audit_gate_build_loop_phase2.py  audit_openclaw_delivery.sh  build_bundle_build_loop_phase1a.py  build_ct2_bundle.py  build_known_failures_bundle.py  build_tdd_bundle.py  bundle_evidence.py  capture_wip1_evidence.py  certification_proof.py  check_known_failures_gate.py  claude_doc_stewardship_gate.py  claude_review_packet_gate.py  claude_session_checker.py  claude_session_complete.py  clean_origin_post_merge_receipt.py  cleanliness_gate.py  ct2_audit_check.py  (+76 more)
(+2767 files in other folders)
