# Project Metadata

[project]
name = "lifeos"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
lifeos = "runtime.cli:main"
coo = "runtime.cli:main"

[tool.setuptools]
packages = ["runtime", "recursive_kernel", "doc_steward", "opencode_governance", "project_builder"]

[tool.pytest.ini_options]
# Merged configuration from pytest.ini and doc_steward/scripts/pyproject.toml
minversion = "6.0"
testpaths = [
    "runtime/tests",
    "tests_doc",
    "tests_recursive"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [
    ".",
    "project_builder",
    "runtime"
]

# Addopts: verbose mode with ignored paths for problematic tests
addopts = [
    "-v",
    "--ignore=runtime/tests/archive_legacy_r6x",
    "--ignore=tests_recursive/test_steward_runner.py",
    "--ignore=tests_recursive/test_e2e_smoke_timeout.py",
    "--ignore=runtime/tests/test_sandbox_remediation.py",
    "--ignore=runtime/tests/test_demo_approval_determinism.py",
    "--ignore=runtime/tests/orchestration/loop/test_configurable_policy.py"
    # Re-enabled tests (mostly passing):
    # - test_missions_phase3.py: 47/49 passing (2 AutonomousBuildCycleMission failures)
    # - test_packet_validation.py: 19/20 passing (1 plan_review_packet failure)
]

# Asyncio settings
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning"
]

# Custom markers
markers = [
    "cold_start: marks tests that measure or test cold start (first-run) performance and initialization"
]
